Create About section and integrate materialize-css

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,9 +1,12 @@
 .hero-section {
-    background: url('../images/hero.jpg') no-repeat center center fixed;
+    background: url('../images/hero.jpg') no-repeat center center;
     background-size: cover;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.hero-text {
+    color: white;
 }
