Abstract Header and turn into navbar

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,3 +1,6 @@
+.header {
+    position: fixed;
+}
 .hero-section {
     background: url('../images/hero.jpg') no-repeat center center;
     background-size: cover;
@@ -7,6 +10,9 @@
     justify-content: center;
     align-items: center;
 }
-.hero-text {
-    color: white;
+.about-section {
+    background: url('../images/hero.jpg') no-repeat center center;
+    background-size: cover;
+    height: 100vh;
+    padding: 20%;
 }
