Create Clients section and render list of clients

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -16,3 +16,10 @@
     height: 100vh;
     padding: 20%;
 }
+.clients-section {
+    /* background: url('../images/hero.jpg') no-repeat center center;
+    background-size: cover; */
+    height: 100vh;
+    padding: 20%;
+    background: orange;
+}
