--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,9 +1,11 @@
+body {
+    background: #f5f5f5;
+    font-family: 'Roboto Mono', sans-serif;
+}
 .header {
     position: fixed;
 }
 .hero-section {
-    background: url('../images/hero.jpg') no-repeat center center;
-    background-size: cover;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -11,16 +13,22 @@
     align-items: center;
 }
 .about-section {
-    background: url('../images/hero.jpg') no-repeat center center;
-    background-size: cover;
+    text-align: center;
+    line-height: 1.75em;
     height: 100vh;
     padding: 20%;
 }
 .clients-section {
-    background: url('../images/hero.jpg') no-repeat center center;
-    background-size: cover;
     height: 100vh;
     padding: 5%;
     display: flex;
     flex-wrap: wrap;
+}
+.contact-section {
+    height: 100vh;
+    padding: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
