--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -2,6 +2,9 @@ body {
     background: #f5f5f5;
     font-family: 'Roboto Mono', sans-serif;
 }
+img {
+    width: 100%;
+}
 .header {
     position: fixed;
 }
